@@ -38,6 +38,9 @@
 
   * Fixed autofire bug for trackball controllers.
 
+  * Fixed bug in TV autodetection in filenames; a filename containing
+    'PAL' would sometimes misdetect as a PAL ROM.
+
   * Fixed Stelladaptor/2600'daptor devices sometimes not being assigned
     correct default mappings.
 
